<resources>
    <string name="app_name">EcoHuerto</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hint_first_name">Nombre</string>
    <string name="hint_last_name">Apellidos</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_repeat_password">Repita la contraseña</string>
    <string name="hint_phone">Teléfono</string>
    <string name="button_register_user">Registrarse</string>
    <string name="checkbox_accept_terms">Acepto los términos y condiciones</string>
    <string name="button_reset_fields">Reset campos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
